	`int` to `void`.  Stop returning after calling functions that
	don't return.
	(char_buffer::read_file): Call `sys_fatal()` if `fread()`
	returns an error, similarly to other calls into the standard C
	library that this file makes.  Improve check for error from
	`fread()` by not regarding a return value of zero when the
	end-of-file indicator is set as an error condition.
	(makeTempFiles, do_file, main): Boolify.  Use idiomatic C++98
	null pointer constant.  Annotate it as null pointer to ease any
	future migration to ISO C++11.
	(makeTempFiles, do_file): Reorder null pointer equality
	comparisons to avoid inadvertent lvalue assignment.
	(do_file): Demote return type from `int` to `bool`.  Return
	Boolean literals.  Drop conditional with empty consequent.
	(main): Declare local variables closer to the points of use.
	Stop trying to be a register allocator: stop reusing loop index
	variable `i` as integer storage for another (albeit related)
	purpose; introduce `operand_index` instead.  Clarify logic by
	splitting combined initialization and comparison operations, and
	by testing function return value directly instead of storing it
	in a pointless temporary.  Use `EXIT_SUCCESS` and `EXIT_FAILURE`
	constants from C library instead of integer literals for exit
	status.

2022-06-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp (run_commands): Trivially refactor.
	Rename variable for clarity; add comment.

2022-06-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp
	(char_buffer::run_output_filter): Return wait status of child
	process.
	(char_buffer::run_output_filter, main): Rename local variable
	`status` to `wstatus` to recognize distinction between exit
	status (a 7-bit quantity) and wait status (a wider type).
	(main): Issue fatal diagnostic if child process exited with
	nonzero status.  Since the child's output to the standard error